--- a/2D_SteadyStateIterativeSolver/2D_SteadyStateIterativeSolver.csproj
+++ b/2D_SteadyStateIterativeSolver/2D_SteadyStateIterativeSolver.csproj
@@ -52,6 +52,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result.cs" />
     <Compile Include="Task.cs" />
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
